# django-jtable

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: regression.yml
demoproject/: asgi.py  settings.py  urls.py  wsgi.py
django_jtables/: apps.py  models.py  urls.py  viewbuilder.py  views.py
static/: index.html
static/jtable2.4.0/: LICENSE
student/: models.py  views.py
