[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jtable"
version = "0.1.0"
description = "Django and jTable integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Ezhil Language Foundation" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# ⚠️ NOTE:
# I couldn’t read the repo’s requirements.txt via GitHub’s HTML from here,
# so this list is based on the README and typical Django setups.
# You should sync this with the actual requirements.txt in the repo.
dependencies = [
  "Django>=3.2",
  "django-cors-headers>=3.13",
]

[project.urls]
Homepage = "https://github.com/ezhil-Language-Foundation/django-jtable"
Source   = "https://github.com/ezhil-Language-Foundation/django-jtable"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

# `django_jtables` is the reusable app, others are the demo project/apps.
include = [
  "django_jtables",
  "django_jtables.static",
  "django_jtables.static.jtable2.4.0",
]

[tool.setuptools.package-data]
"django_jtables" = ["static/jtable2.4.0/**/*"]
